--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//WebContent/file.jsp=UTF-8
 encoding//WebContent/index.jsp=UTF-8
 encoding//WebContent/pay.jsp=UTF-8
+encoding/<project>=UTF-8
